# MatlabMPC

GitMPC/Spline_based_MPC/: model_predictive_control2.py
GitMPC/Udemy/: MAIN_MPC_car_general.py  support_files_car_general.py
Git_MPC_Python/trajectory_gen_mpc/UML/: Trajectory_gen_initial_UML.mdj
Git_MPC_Python/trajectory_gen_mpc/install/: local_setup.sh  setup.sh  setup.zsh
Git_MPC_Python/trajectory_gen_mpc/log/: latest_build
Git_MPC_Python/trajectory_gen_mpc/src/custom_interfaces/: CMakeLists.txt
Git_MPC_Python/trajectory_gen_mpc/src/trajectory_gen_mpc/: setup.cfg  setup.py
Ros2_Multithreading_c++/: ROS2_Commands.txt
Ros2_Multithreading_c++/C++/: HelloWorld.cpp  Interview.cpp  a.out  aptiv.cpp  staticVariable.cpp  structs.cpp
Ros2_Multithreading_c++/C++/VSCode/: HelloWorld.cpp  Practice.cpp  TrickArrays  TrickArrays.cpp  a.out
Ros2_Multithreading_c++/C++/VSCode/C++11/: Bind.cpp  CaptureLambda.cpp  CaptureThis.cpp  DeligatingConstructors.cpp  Functional.cpp  Lambda.cpp  LvalRvalRef.cpp  MemoryCopy.cpp  MoveConstructors.cpp  PerfectForwarding.cpp  RingBuffer.cpp  StaticCasr.cpp  TypeInfo.cpp  a.out  defualt&delete.cpp  inisializerList.cpp  initializationC++11.cpp  mutableLambda.cpp  (+1 more)
Ros2_Multithreading_c++/ROS2/catkin_ws/src/my_cpp_pkg/: CMakeLists.txt
Ros2_Multithreading_c++/ROS2/catkin_ws/src/my_cpp_pkg/src/: Act2Publisher.cpp  Act2Subscriber.cpp  Act3ResetClient.cpp  ClassNode.cpp  LedPannel.cpp  PublisherNode.cpp  RosWrapper.cpp  Subscriber.cpp  a.out  batteryNode.cpp  cppServer.cpp  firstNode.cpp  rosClient.cpp  rosClientOOPS.cpp  stdBindTest.cpp
Ros2_Multithreading_c++/ROS2/catkin_ws/src/my_cpp_pkg/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Trials/: Draw_MPC_PS_Obstacles.m  MultipleShootingBicycleModelPaper.asv  Sim_1_MPC_Robot_PS_sing_shooting.m  Sim_2_MPC_R_PS_mul_shooting_RK.m
WorkingCode/DynamicObstacleAvoidance/: Draw_MPC_PS_Obstacles.asv  MultipleShootingBicycleModelPaper.m  ShiftBicycleModel.m  Test_Shift.m  test_model  untitled2.asv  untitled2.m
WorkingCode/MultipleGoalLocations/: MultipleShootingBicycleModelPaper.m  ShiftBicycleModel.m
WorkingCode/Overtake/: Draw_MPC_PS_Obstacles.m  MultipleShootingBicycleModelPaper.m  ShiftBicycleModel.m
WorkingCode/TwoObstaclesWithMultipleGolas/: Draw_MPC_PS_Obstacles.m  MultipleShootingBicycleModelPaper.m
(+215 files in other folders)
